--- a/music/templates/music/details.html
+++ b/music/templates/music/details.html
@@ -1,3 +1,8 @@
+{% load static %}
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="{% static 'music/style.css' %}" />
+
+
 <img src="{{album.album_logo}}" height="50px" width="50px">
 
 
