--- a/music/templates/music/base.html
+++ b/music/templates/music/base.html
@@ -25,11 +25,13 @@
             <!--<img src="{% static 'music/images/Savin-logo.png'%}" height="50px" width="150px">-->
                 Savin
             </a>
+            <a class="navbar-brand"  href="{%url 'music:all_albums'%}">
+                Albums
+            </a>
 </div>
 
     </div>
 </nav>
-
 
 {% block body %}
 {% endblock %}
