--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -31,7 +31,8 @@
     </div>
 </nav>
 
-<a href="{%url 'music:index'%}">Album</a>
+<a href="{%url 'music:index'%}">Album</a><br>
+<a href="{%url 'shoppingCart:index'%}">Shopping Cart</a>
 
 </body>
 </html>
