--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% block title %}Shopping Cart{% endblock %}</title>
+    <title>{% block title %}Savin{% endblock %}</title>
     {% load static %}
     <!--<link rel="shortcut icon" type="image/png" href="{%  static 'favicon.ico' %}"/>-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
     </div>
 </nav>
 
-<a href="{%url 'music:index'%}">Album</a><br>
+<a href="{%url 'music:index'%}">Music</a><br>
 <a href="{%url 'shoppingCart:index'%}">Shopping Cart</a>
 
 </body>
