--- a/shoppingCart/templates/sCart/base.html
+++ b/shoppingCart/templates/sCart/base.html
@@ -21,12 +21,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{% url 'music:index' %}">
+            <a class="navbar-brand" href="{% url 'shoppingCart:index' %}">
             <!--<img src="{% static 'music/images/Savin-logo.png'%}" height="50px" width="150px">-->
                 Savin
             </a>
-            <a class="navbar-brand"  href="{%url 'music:all_albums'%}">
-                Albums
+            <a class="navbar-brand"  href="{% url 'shoppingCart:allOrders' %}">
+                All Orders
+            </a>
+        <a class="navbar-brand" href="{% url 'shoppingCart:addOrder' %}">
+                Create Order
             </a>
 </div>
 
