--- a/shoppingCart/templates/sCart/addOrder.html
+++ b/shoppingCart/templates/sCart/addOrder.html
@@ -1,22 +1,32 @@
 {% extends 'sCart/base.html' %}
 {% block scart_active %}active{% endblock %}
 {% block body %}
-
-<h1>Shopping Cart</h1>
-
-
-<div>
-    <p>Item Entry</p>
-    <form id="item" action="/saveOrder/" method="POST">
+    <h1>Shopping Cart</h1>
+    <div>
+        <p>Item Entry</p>
         workfile : {{workfile}} <br>
         cartQty : {{cartQty}} <br>
-        Item Number : <input type="number" name="item_number"><br>
-        Quantity : <input type="number" name="quantity"><br>
-        Customer ID : <input type="text" name="cusId"><br>
-    </form>
-</div>
-
-</div>
-
-
+        {% if items %}
+            {% for item in items %}
+            <li>Number {{item.number}}  Qty {{item.quantity}}</li>
+            {% endfor %}
+        {% else %}
+        <div> NO ITEMS IN CART</div>
+        {% endif %}
+        <div>
+            <form id="item" action="{% url 'shoppingCart:addItem' %}" method="post">
+                {% csrf_token %}
+                Item Number : <input type="number" name="item_number" value="{{ item_number}}"><br>
+                Quantity : <input type="number" name="quantity" value="{{item_quantity}}"><br>
+                <input type="submit" value="Add Item to Order">
+            </form>
+        </div>
+        <div>
+            <form id="order" action="/addOrder/" method="post">
+                {% csrf_token %}
+                Customer ID : <input type="text" name="cusId"><br>
+                <input type="submit" value="Save Order">
+            </form>
+        </div>
+    </div>
 {% endblock %}
