--- a/shoppingCart/templates/sCart/base.html
+++ b/shoppingCart/templates/sCart/base.html
@@ -23,7 +23,7 @@
             </button>
             <a class="navbar-brand" href="{% url 'shoppingCart:index' %}">
             <!--<img src="{% static 'music/images/Savin-logo.png'%}" height="50px" width="150px">-->
-                Savin
+                Shopping Cart
             </a>
             <a class="navbar-brand"  href="{% url 'shoppingCart:allOrders' %}">
                 All Orders
