--- a/shoppingCart/templates/sCart/addOrder.html
+++ b/shoppingCart/templates/sCart/addOrder.html
@@ -9,6 +9,7 @@
         {% if items %}
             {% for item in items %}
                 <li>Number {{item.number}}  Qty {{item.quantity}}</li>
+                <li> {{item}} </li>
             {% endfor %}
         {% else %}
             <div> NO ITEMS IN CART</div>
@@ -19,9 +20,9 @@
                 {{ itemForm.as_p}}
                 <!-- Item Number : <input type="number" name="item_number" value="{{ item_number}}"><br>
                 Quantity : <input type="number" name="quantity" value="{{item_quantity}}"><br>-->
-                <input type="hidden" name="workfile" value="{{workfile}}">
+                <!-- <input type="hidden" name="workfile" value="{{workfile}}">
                 <input type="hidden" name="cartQty" value="{{cartQty}}">
-                <input type="hidden" name="items" value="{{items}}">
+                <input type="hidden" name="items" value="{{items}}" > -->
                 <input type="submit" value="Add Item to Order">
             </form>
         </div>
