--- a/shoppingCart/templates/sCart/addOrder.html
+++ b/shoppingCart/templates/sCart/addOrder.html
@@ -4,10 +4,10 @@
     <h1>Shopping Cart</h1>
     <div>
         <h2>Item Entry</h2>
-        workfile : {{workfile}} <br>
-        cartQty : {{cartQty}} <br>
-        {% if items %}
-            {% for item in items %}
+        workfile : {{cart.workfile}} <br>
+        cartQty : {{cart.cartQty}} <br>
+        {% if cart.items %}
+            {% for item in cart.items %}
                 <li>Number {{item.number}}  Qty {{item.quantity}}</li>
                 <li> {{item}} </li>
             {% endfor %}
@@ -18,19 +18,14 @@
             <form id="item" action="{% url 'shoppingCart:addItem' %}" method="post">
                 {% csrf_token %}
                 {{ itemForm.as_p}}
-                <!-- Item Number : <input type="number" name="item_number" value="{{ item_number}}"><br>
-                Quantity : <input type="number" name="quantity" value="{{item_quantity}}"><br>-->
-                <!-- <input type="hidden" name="workfile" value="{{workfile}}">
-                <input type="hidden" name="cartQty" value="{{cartQty}}">
-                <input type="hidden" name="items" value="{{items}}" > -->
-                <input type="submit" value="Add Item to Order">
+                <input type="submit" value="Add Item">
             </form>
         </div>
         <div>
             <form id="order" action="/addOrder/" method="post">
                 {% csrf_token %}
                 Customer ID : <input type="text" name="cusId"><br>
-                <input type="submit" value="Save Order">
+                <input type="submit" value="Search Customer">
             </form>
         </div>
     </div>
